package com.io.petclinic;

public class VisitController {
}
