@startuml PetClinic


abstract Human{
    -String firstName
    -String surname
}

entity Owner extends Human {
    -Long ownerId
    +void addNewPet(Pet)
    +void addNewVisit(Pet)
    +void cancelVisit(Long id)
    +Pet getPetById(Long)
}

entity Vet extends Human {
    -Long vetId
    -List<Visit> visits
    -Date workingHours
}

entity Visit {
    -Long visitId
    -Date beginTime
    -Long petId
}

entity Pet {
    -Long petId
    -String name
    -String species
    -List<Visit> visits
}

interface VetRepository 
interface PetRepository 
interface OwnerRepository
interface VisitRepository
interface JpaRepository

JpaRepository <|.. VetRepository
JpaRepository <|.. PetRepository
OwnerRepository ..|> JpaRepository
VisitRepository ..|> JpaRepository

PetRepository ..o PetService
VetRepository ..o VetService
OwnerService o.. OwnerRepository
VisitService o.. VisitRepository

PetService <.. PetController
VetService <.. VetController
OwnerController ..> OwnerService
VisitController ..> VisitService

Pet -* Human
Visit <.. Human
Pet "1..1" - Visit

GreetingController -> Owner
Vet <- GreetingController

class OwnerService {
    -OwnerRepository ownerRepository
    -VisitRepository visitRepository
    -PetRepository petRepository
    +Owner findOwner(Long)
    +Owner updateOwner(Owner, Long)
    +void deleteOwner(Long)
    +Pet addPet(Owner, Pet)
    +List findAllOwners()
}

class PetService {
    -PetRepository repository
    +List findAllPets()
    +Pet createPet(String, String)
    +void deletePet()
}

class VetService {
    -VetRepository repository
    +List findAllVets()
    +Vet findVet(Long)
    +Vet updateVet(Vet, Long)
    +void deleteVet(Long)
}

class VisitService {
    -VisitRepository repository
    +Visit createVisit(Pet)
    +void deleteVisit()
    +List<Visit> getAllVisits()
    +Visit getVisitById()
}

class GreetingController {
    -placeholder token
    +placeholder login()
}

class OwnerController {
    -OwnerService ownerService
    +List<Owner> getAllOwners()
    +Owner getOwner(@PathVariable Long)
    +Owner updateOwner(Owner, Long)
    +void delete(Long)
    +Pet getPet(Long, Long)
}

class PetController {
    -PetService petService
    +List getAllPets()
}

class VisitController {
    -VisitService visitService
    +List<Visit> getAllVisits()
    +Visit getVisit(@PathVariable Long)
    +Visit updateVisit(Visit)
    +void delete(Long)
}
class VetController {
    -VetService vetService
    -VisitService visitService
    +List<Vet> getAllVets()
    +Vet getVet(@PathVariable Long)
    +Vet updateVet(@RequestBody Vet, @PathVariable Long)
    +void deleteVet(@PathVariable Long)
}

@enduml